<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Split the Bill</string>
    <string name="action_settings">Settings</string>
    <string name="txtTitle">Split the Bill</string>
    <string name="imgDescription">Tip Calculator</string>
    <string name="btnEnterBill">Enter Bill</string>

    <string name="btnCalculate">Calculate</string>
    <string name="txtBillAmount">Enter Bill Amount</string>
    <string name="txtGroupSize">Enter Number of People</string>

    <string name="txtPrompt">Select Service Quality</string>
    <string-array name="txtService">
        <item>Excellent</item>
        <item>Average</item>
        <item>Poor</item>
    </string-array>

</resources>
